overflow fix for children

--- a/designsFromWix/templateStyles.css
+++ b/designsFromWix/templateStyles.css
@@ -247,7 +247,7 @@
     flex-direction: row;
 }
 .child_price{
-    width: 100px;
+    min-width: 100px;
 }
 
 .child_hr{
